--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^7.1.1",
     "nodemon": "^2.0.2"
   }
 }
